ReplyWidget: Fix spacing for save error messages
This was accidentally removed in c8564f6ccbf2ca7e7b5b422aac43f2d427d806c3.

--- a/modules/dt.ui.ReplyWidget.less
+++ b/modules/dt.ui.ReplyWidget.less
@@ -41,6 +41,10 @@
 		}
 	}
 
+	.oo-ui-messageWidget {
+		margin-bottom: 0.5em;
+	}
+
 	&-anonWarning {
 		display: flex;
 		align-items: center;
